out
warning: unused manifest key: build
warning: unused manifest key: target.aarch64-unknown-none.rustflags
   Compiling graph_os v0.1.0 (/home/mfrumki1/raspi-os)
warning: the feature `lang_items` is internal to the compiler or standard library
 --> src/main.rs:6:12
  |
6 | #![feature(lang_items)]
  |            ^^^^^^^^^^
  |
  = note: using it is strongly discouraged
  = note: `#[warn(internal_features)]` on by default

warning: unused import: `write`
 --> src/aarch64/cpu.rs:3:19
  |
3 | use crate::{read, write};
  |                   ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::utils::math`
 --> src/canvas/canvas2d.rs:4:5
  |
4 | use crate::utils::math;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::sync::SpinMutex`
 --> src/platform/raspi3/mmio.rs:1:5
  |
1 | use crate::sync::SpinMutex;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `board::*`
 --> src/platform/raspi3/mmio.rs:4:9
  |
4 | pub use board::*;
  |         ^^^^^^^^

warning: unused import: `cpu`
 --> src/platform/raspi3/start.rs:2:22
  |
2 | use crate::aarch64::{cpu, mmu};
  |                      ^^^

warning: unused imports: `canvas2d::Canvas2D`, `line::Line`, `matrix::Matrix`, `vector::Vector`
 --> src/platform/raspi3/start.rs:3:21
  |
3 | use crate::canvas::{canvas2d::Canvas2D, line::Line, matrix::Matrix, vector::Vector};
  |                     ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused imports: `print`, `read`, `write`
 --> src/platform/raspi3/start.rs:5:13
  |
5 | use crate::{print, println, read, write};
  |             ^^^^^           ^^^^  ^^^^^

warning: unused imports: `Channel`, `FBConfig`, `GPUController`, `Instruction`, `MailboxController`, `MessageBuffer`, `MessageBuilder`, `Pin`, `lcd::LCDController`
  --> src/platform/raspi3/start.rs:8:41
   |
8  |     gpio::{GPIOController, OutputLevel, Pin, StatusLight},
   |                                         ^^^
9  |     gpu::{FBConfig, GPUController},
   |           ^^^^^^^^  ^^^^^^^^^^^^^
10 |     lcd::LCDController,
   |     ^^^^^^^^^^^^^^^^^^
11 |     mailbox::{Channel, Instruction, MailboxController, MessageBuffer, MessageBuilder},
   |               ^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `Ordering`
 --> src/sync.rs:2:32
  |
2 |     sync::atomic::{AtomicBool, Ordering},
  |                                ^^^^^^^^

warning: unused import: `alloc::boxed::Box`
 --> src/sync.rs:6:5
  |
6 | use alloc::boxed::Box;
  |     ^^^^^^^^^^^^^^^^^

warning: the feature `asm` has been stable since 1.59.0 and no longer requires an attribute to enable
 --> src/main.rs:4:12
  |
4 | #![feature(asm)]
  |            ^^^
  |
  = note: `#[warn(stable_features)]` on by default

warning: the feature `global_asm` has been stable since 1.59.0 and no longer requires an attribute to enable
 --> src/main.rs:3:12
  |
3 | #![feature(global_asm)]
  |            ^^^^^^^^^^

warning: formatting may not be suitable for sub-register argument
  --> src/aarch64/registers.rs:17:18
   |
17 |             asm!(concat!("msr ", $sysreg, ", {}"), in(reg) $value);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: src/aarch64/mmu.rs:15:28
   |
15 |         write!("mair_el1", mair);
   |         ------------------------
   |         |                  |
   |         |                  for this argument
   |         in this macro invocation
   |
   = help: use `{0:w}` to have the register formatted as `w0`
   = help: or use `{0:x}` to keep the default formatting of `x0`
   = note: `#[warn(asm_sub_register)]` on by default
   = note: this warning originates in the macro `write` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> src/platform/raspi3/start.rs:52:44
   |
52 |     let mut nums: alloc::vec::Vec<usize> = alloc::vec::Vec::with_capacity();
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-- an argument of type `usize` is missing
   |
note: associated function defined here
  --> /rustc/a7e4de13c1785819f4d61da41f6704ed69d5f203/library/alloc/src/vec/mod.rs:480:12
help: provide the argument
   |
52 |     let mut nums: alloc::vec::Vec<usize> = alloc::vec::Vec::with_capacity(/* usize */);
   |                                                                          ~~~~~~~~~~~~~

warning: unused variable: `f`
  --> src/aarch64/math.rs:31:12
   |
31 | pub fn sin(f: f64) -> f64 {
   |            ^ help: if this is intentional, prefix it with an underscore: `_f`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `f`
  --> src/aarch64/math.rs:35:12
   |
35 | pub fn cos(f: f64) -> f64 {
   |            ^ help: if this is intentional, prefix it with an underscore: `_f`

warning: unused variable: `address`
  --> src/aarch64/mmu.rs:98:38
   |
98 |         pub fn set_address(mut self, address: usize) -> Self {
   |                                      ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_address`

warning: variable does not need to be mutable
  --> src/allocator/ll_alloc.rs:59:17
   |
59 |             let mut val = FreeBlock::from_components(size, None);
   |                 ----^^^
   |                 |
   |                 help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `x`
  --> src/canvas/canvas2d.rs:26:35
   |
26 |             background: Box::new(|x, y| 0x000000),
   |                                   ^ help: if this is intentional, prefix it with an underscore: `_x`

warning: unused variable: `y`
  --> src/canvas/canvas2d.rs:26:38
   |
26 |             background: Box::new(|x, y| 0x000000),
   |                                      ^ help: if this is intentional, prefix it with an underscore: `_y`

warning: unused variable: `i`
  --> src/platform/raspi3/exception.rs:17:13
   |
17 |         for i in 0..exception_source + 5{
   |             ^ help: if this is intentional, prefix it with an underscore: `_i`

warning: unused variable: `i`
  --> src/platform/raspi3/exception.rs:26:13
   |
26 |         for i in 0..exception_type + 5 {
   |             ^ help: if this is intentional, prefix it with an underscore: `_i`

warning: unused variable: `spsr`
 --> src/platform/raspi3/exception.rs:7:108
  |
7 | ...usize, esr: usize, elr: usize, spsr: usize, far: usize, sp: usize) {
  |                                   ^^^^ help: if this is intentional, prefix it with an underscore: `_spsr`

warning: unused variable: `far`
 --> src/platform/raspi3/exception.rs:7:121
  |
7 | ...usize, elr: usize, spsr: usize, far: usize, sp: usize) {
  |                                    ^^^ help: if this is intentional, prefix it with an underscore: `_far`

warning: unused variable: `sp`
 --> src/platform/raspi3/exception.rs:7:133
  |
7 | ... usize, spsr: usize, far: usize, sp: usize) {
  |                                     ^^ help: if this is intentional, prefix it with an underscore: `_sp`

For more information about this error, try `rustc --explain E0061`.
warning: `graph_os` (bin "graph_os") generated 25 warnings
error: could not compile `graph_os` (bin "graph_os") due to 1 previous error; 25 warnings emitted
make: *** [Makefile:43: build] Error 101
